<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F0"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OneActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/tips_jaga_diri_selama_new_normal"
        android:textColor="#E44652"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/jagadiri" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_1_mencuci_tangan_sebelum_dan_sesudah_melakukan_kontak_fisik"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_2_sedia_tisu_basah_atau_hand_sanitizer"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_3_hindari_menyentuh_wajah_terlalu_sering_who_menyebutkan_virus_corona_bisa_masuk_ke_tubuh_manusia_melalui_mulut_hidung_dan_mata"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_4_menggunakan_masker_saat_beraktivitas_di_luar_rumah"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_5_konsumsi_makanan_yang_bergizi"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_6_konsumsi_vitamin_yang_dapat_meningkatkan_metabolisme_tubuh"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_7_bawa_alat_makan_pribadi_saat_sedang_makan_di_luar"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_8_menerapkan_sosial_distancing"
        android:textColor="#333333"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/_9_hindari_menggunakan_transportasi_umum"
        android:textColor="#333333"
        android:textSize="15sp" />


</LinearLayout>