<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAF8F0"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".OneActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/langkah_sederhana_memulai_hidup_sehat"
            android:textColor="#DD5D00"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/olahraga" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_1_hindari_stress_n_saat_merasa_stres_semua_sistem_dalam_tubuh_akan_meresponnya_dengan_cara_yang_berbeda_beda_stres_yang_bersifat_kronis_dapat_berdampak_pada_kesehatan_secara_keseluruhan"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_2_menjaga_makan_n_apa_yang_kita_makan_tentu_akan_memengaruhi_bagaimana_tubuh_kita_bekerja_oleh_sebabnya_penting_untuk_memerhatikan_setiap_makanan_yang_dikonsumsi_setiap_hari"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_3_olahraga_teratur_n_dengan_aktif_bergerak_tubuh_akan_berusaha_untuk_membakar_kalori_yang_mengendap_di_tubuh_hal_ini_juga_dapat_membantu_mengalirkan_lebih_banyak_oksigen_ke_dalam_sel_sel_tubuh_dan_menjaganya_tetap_sehat"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_4_kurangi_konsumsi_gula_berlebih_n_asupan_gula_yang_terlalu_banyak_dapat_memicu_penyakit_diabetes_jika_sudah_terkena_diabetes_maka_akan_lebih_rentan_terkena_berbagai_penyakit_kronis_di_kemudian_hari_seperti_penyakit_jantung_dan_stroke"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_5_banyak_minum_air_putih_dan_kurangi_minuman_bersoda"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/_6_cukup_tidur_n_tidur_menjadi_sebuah_fondasi_di_mana_pikiran_dan_tubuh_yang_sehat_terbentuk_jika_fondasi_ini_goyah_tentunya_akan_berdampak_pada_kesehatan"
            android:textColor="#333333"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>